# GAMS25-in_Qt

./: .gitignore  CMakeLists.txt  README.md  Transport4-vs2013.vcxproj  Transport4-vs2015.vcxproj  Transport4-vs2017.vcxproj  gamscpp.lib  transport4.cpp
libs/: CmakeLists.txt
